[package]
name = "doomsayer"
version = "0.1.0"
authors = ["Ash <relativistic.policeman@gmail.com>"]
license = "MIT"

[dependencies]
failure = "0.1"
mammut = "0.11"
openssl-probe = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = "2.3"
slog-async = "2.3"
slog-term = "2.4"
structopt = "0.2"